# dbm_code

./: CMakeLists.txt  README.md  base_learner.cpp  base_learner.h  base_learner_trainer.cpp  base_learner_trainer.h  data_set.cpp  data_set.h  loss_function.cpp  loss_function.h  main.cpp  matrix.cpp  matrix.h  model.cpp  model.h  r_inc.txt  tools.cpp  tools.h
docs/source/: conf.py  index.rst
include/: base_learner.h  base_learner_trainer.h  data_set.h  loss_function.h  matrix.h  model.h  tools.h
lib_src/: base_learner.cpp  base_learner_trainer.cpp  data_set.cpp  matrix.cpp  model.cpp  tools.cpp
src_api/: dbm_code_py.py  dbm_code_r.R
src_lib/: base_learner.cpp  base_learner_trainer.cpp  data_set.cpp  interact.inc  loss_function.cpp  matrix.cpp  model.cpp  partial_dependence_plot.inc  py_api.cpp  r_api.cpp  tools.cpp
src_test/: dbmPythonApplication.ipynb  main_test.R  main_test.cpp  main_test.py
test_src/: main.cpp
